@@ -1,3 +1,11 @@
+2007-05-25  jtl  <jtl@schlund.de>
+
+	* src/de/schlund/pfixcore/util/DumpText.java: 
+	* src/de/schlund/pfixcore/util/ImportText.java: new tools to dump and 
+	import used include parts 
+	* projects/dumptext.sh:
+	* projects/importtext.sh: use the tools above.
+
 2007-05-14  Martin Leidig  <mleidig@schlund.de>
 
 	Fixed race condition in iframe fallback handling.
